# ethercat-mastery-example

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENT.md  README.md
firmware/: .mtbqueryapi  Makefile  project_info.json
firmware/bsps/TARGET_APP_KIT_XMC48_RELAX_ECAT_V1/: cybsp.c  cybsp_types.h
firmware/bsps/TARGET_APP_KIT_XMC48_RELAX_ECAT_V1/config/: design.modus
firmware/bsps/TARGET_APP_KIT_XMC48_RELAX_ECAT_V1/config/GeneratedSource/: .hardware-config-server.generated-files  cycfg.c  cycfg.h  cycfg.timestamp  cycfg_dmas.h  cycfg_notices.h  cycfg_peripherals.c  cycfg_peripherals.h  cycfg_pins.c  cycfg_pins.h  cycfg_routing.h  cycfg_system.c  cycfg_system.h
firmware/libs/: app.mk  mtb-xmclib-cat3.mtb  mtb.mk  recipe-make-cat3.mtb
firmware/scripts/: build_linux.sh  flash_openocd.sh  patch_ninja_linux.py
firmware/scripts/linux/: mtb-example-xmc48-ethernet-ethcat-loopback.ninja.win-template
firmware/src/: main.cpp
firmware/src/ethernet/: eth_rx.cpp  eth_rx.hpp
firmware/src/logging/: log.hpp
firmware/src/platform/: retarget_stdio.cpp
host/: CMakeLists.txt
host/include/ecat/: ethercat.hpp  raw_socket.hpp
host/src/: ethercat.cpp  main.cpp  raw_socket.cpp
scripts/: build_firmware.sh  build_host.sh  fetch_deps.sh  flash_firmware.sh  jlink_udev.rules  lint.sh  rtt_log.sh  rtt_log_jlink.sh  setup_ubuntu.sh
